chutoro-providers/dense/tests/trybuild/portable_simd_without_feature.stderr
error[E0658]: use of unstable library feature `portable_simd`
 --> tests/trybuild/portable_simd_without_feature.rs:7:5
  |
7 | use std::simd::Simd;
  |     ^^^^^^^^^^^^^^^
  |
  = note: see issue #86656 <https://github.com/rust-lang/rust/issues/86656> for more information

error[E0658]: use of unstable library feature `portable_simd`
  --> tests/trybuild/portable_simd_without_feature.rs:13:31
   |
13 |     let _vec: Simd<f32, 16> = Simd::splat(1.0);
   |                               ^^^^
   |
   = note: see issue #86656 <https://github.com/rust-lang/rust/issues/86656> for more information

error[E0658]: use of unstable library feature `portable_simd`
  --> tests/trybuild/portable_simd_without_feature.rs:13:15
   |
13 |     let _vec: Simd<f32, 16> = Simd::splat(1.0);
   |               ^^^^^^^^^^^^^
   |
   = note: see issue #86656 <https://github.com/rust-lang/rust/issues/86656> for more information

error[E0658]: use of unstable library feature `portable_simd`
  --> tests/trybuild/portable_simd_without_feature.rs:13:31
   |
13 |     let _vec: Simd<f32, 16> = Simd::splat(1.0);
   |                               ^^^^^^^^^^^
   |
   = note: see issue #86656 <https://github.com/rust-lang/rust/issues/86656> for more information
